[package]
name = "kof"
version = "0.1.3"
license = "MIT"
repository = "https://github.com/pindjouf/kof.git"
description = "A Git-Based Note Management System"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
open-file = "0.1.0"
patharg = "0.4.0"
rprompt = "2.1.1"
scrypt = "0.11.0"
skim = "0.10.4"
typenum = "1.17.0"
walkdir = "2.5.0"
